<resources>
    <string name="app_name">UserProfile</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="country">Country</string>
    <string name="account_information">Account Information:</string>
    <string name="user_profile">User Profile</string>
    <string name="afghanistan">Afghanistan</string>
    <string name="albania">Albania</string>
    <string name="algeria">Algeria</string>
    <string name="andorra">Andorra</string>
</resources>